fix figcaption on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,21 @@
 /*  4k screens */
+
+@media screen and (max-width: 500px) {
+
+  figcaption {
+    position: static;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    margin-bottom:10px;
+    margin-top:5px;
+    width:fit-content
+}
+
+}
+
+
+
 @media screen and (max-width: 2560px) {
 .wrapper{
   padding:0% 10%;
